[package]
name = "mybench"
version = "0.1.0"
authors = ["dvshapkin <dvshapkin@mail.ru>"]
edition = "2018"

description = "Simple (and very primitive) benchmarking"

readme = "README.md"

documentation = "https://docs.rs/mybench"
homepage = "https://github.com/dvshapkin/mybench"
repository = "https://github.com/dvshapkin/mybench"

keywords = ["benchmarking", "performance-measure"]

license = "MIT"

[dependencies]
